# onepass-audioclean-seg

./: LICENSE  README.md  pyproject.toml
schemas/: seg_report.v1.schema.json  segments.v1.schema.json  silences.v1.schema.json
tests/: test_auto_strategy_fallback_to_energy_when_silence_poor.py  test_auto_strategy_uses_vad_when_available_and_good.py  test_check_deps_missing_ffmpeg.py  test_check_deps_ok_json.py  test_cli_emit_segments_energy_no_ffmpeg.py  test_cli_emit_segments_from_existing_silences.py  test_cli_emit_segments_with_features_and_emit_wav.py  test_cli_help.py  test_cli_segment_parses.py  test_cli_strategy_vad_missing_dependency.py  test_complement_segments_basic.py  test_config_merge_precedence.py  test_dump_effective_config.py  test_energy_gap_fill_min_silence.py  test_energy_strategy_detects_two_speech_islands.py  test_error_exit_codes.py  test_export_csv_columns.py  test_export_mask_json_bins.py  test_export_timeline_json.py  test_flags_generation_split_merge_low_energy.py  test_golden_segments_output.py  test_max_duration_split_equal.py  test_merge_overlaps_after_padding.py  test_min_duration_merge_deterministic.py  test_padding_and_min_filter.py  test_resolver.py  test_rms_computation.py  test_run_manifest_written.py  test_run_summary_written_on_dry_run.py  test_segment_analyze_writes_silences.py  test_segment_validate_output_flag.py  test_segments_include_strategy_field.py  test_silencedetect_parser.py  test_summarize_command_outputs_stats.py  test_vad_strategy_with_mock_webrtcvad.py  test_validate_bad_id_sequence.py  (+3 more)
tests/golden/: config.json
(+37 files in other folders)
