[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onepass-audioclean-seg"
version = "0.1.0"
description = "Repo2 分段模块：将长音频切成候选片段（segments）"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "onepass"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
audioclean-seg = "onepass_audioclean_seg.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
vad = [
    "webrtcvad>=2.0.10",
]
yaml = [
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
onepass_audioclean_seg = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

